--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="pupil"></div>
   </div>
 </div>
-<img src="assets/icons/Flowerstem.png" id="flowerStem">
+<img src="assets/icons/flowerstem.png" id="flowerStem">
 <div id="zoomControls">
   <div class="zoom-label">Zoom!</div>
   <div class="zoom-button-row">
@@ -33,10 +33,11 @@
     <button id="homeBtn" class="zoom-btn home-btn">I'm Lost!</button>
   </div>
 </div>
-<div id="titlePanel"> <img src="assets/icons/Shelbytitle.png" id="titleImage"> </div>
+<div id="titlePanel"> <img src="assets/icons/shelbytitle.png" id="titleImage"> </div>
 
 <!-- IMPORTANT: keep this at the end --> 
 <script src="main.js?v=3"></script>
 </body>
 </html>
+
 
