--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>Shelby Park Map</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/light/main.css" />
 <script src="https://js.arcgis.com/4.30/"></script>
@@ -39,5 +40,6 @@
 <script src="main.js?v=3"></script>
 </body>
 </html>
+
 
 
